--- a/todo/base/templates/base/task_list.html
+++ b/todo/base/templates/base/task_list.html
@@ -5,11 +5,14 @@
 <table>
     <tr>
         <th>Task</th>
+        <th></th>
+        <th></th>
     </tr>
     {% for task in tasks %}
     <tr>
         <td>{{task.title}}</td>
         <td><a href="{% url 'task' task.id %}">View</a></td>
+        <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
     </tr>
     {% empty %}
     <h3>No tasks in list</h3>
