--- a/todo/base/templates/base/task_form.html
+++ b/todo/base/templates/base/task_form.html
@@ -2,7 +2,7 @@
 
 <a href="{% url 'tasks' %}">Go back</a>
 
-<form method="POST" action="">
+<form method="POST">
     {% csrf_token %}
     {{form.as_p}}
     <input type="submit" title="Create Task">
