--- a/todo/base/templates/base/task_list.html
+++ b/todo/base/templates/base/task_list.html
@@ -10,6 +10,11 @@
 
 <a href="{% url 'task-create' %}">Add Task</a>
 
+<form method="GET">
+    <input type="text" name="query" value="{{query_value}}">
+    <input type="submit" value="Search">
+</form>
+
 <table>
     <tr>
         <th>Task</th>
