--- a/todo/base/templates/base/login.html
+++ b/todo/base/templates/base/login.html
@@ -1,10 +1,21 @@
-<h1>Login</h1>
+{% extends 'base/main.html' %}
 
-<form method="POST">
-    {% csrf_token %}
-    {{form.as_p}}
+{% block content %}
 
-    <input type="submit" value="Login">
-</form>
 
-<p>Don't have an account?</p><a href="{% url 'register' %}">Register</a>
+<div class="header-bar">
+    <h1>Login</h1>
+</div>
+
+<div class="card-body">
+    <form method="POST">
+        {% csrf_token %}
+        {{form.as_p}}
+    
+        <input class="button" type="submit" value="Login">
+    </form>
+
+    <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
+</div>
+
+{% endblock content %}
