--- a/todo/base/templates/base/task_confirm_delete.html
+++ b/todo/base/templates/base/task_confirm_delete.html
@@ -1,8 +1,19 @@
-<a href="{% url 'tasks' %}">Go back</a>
+{% extends 'base/main.html' %}
 
-<form method="POST">
-    {% csrf_token %}
-    <p>Are you sure you want to delete this task? <b>{{task}}</b></p>
+{% block content %}
 
-    <input type="submit" title="Delete">
-</form>
+<div class="header-bar">
+    <a href="{% url 'tasks' %}">&#8592; Back</a>
+
+</div>
+
+<div class="card-body">
+    <form method="POST">
+        {% csrf_token %}
+        <p>Are you sure you want to delete <b>{{task}}</b> task?</p>
+    
+        <input class="button" type="submit" value="Delete">
+    </form>
+</div>
+
+{% endblock content %}
