--- a/todo/static/css/style.css
+++ b/todo/static/css/style.css
@@ -19,6 +19,20 @@ p {
     color: #4b5156;
 }
 
+input[type=text],
+input[type=password],
+textarea {
+    border: 1px solid #EB796F;
+    border-radius: 5px;
+    padding: 10px;
+    width: 90%;
+}
+
+label {
+    padding-top: 10px !important;
+    display: block;
+}
+
 .container {
     max-width: 50%;
     margin: auto;
@@ -45,7 +59,7 @@ p {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px;
+    padding: 35px 20px;
     background-color: #fff;
     border-top: 1px solid rgb(226, 226, 226);
 }
@@ -78,8 +92,50 @@ p {
     text-decoration: none;
     font-weight: 900;
     color: #CF4949;
-    font-size: 22px;
+    font-size: 35px;
     line-height: 0;
+}
+
+.button {
+    border: 1px solid #EB796F;
+    background-color: #FAFAFA;
+    color: #EB796F;
+    padding: 10px;
+    margin-left: 10px;
+    font-size: 14px;
+    border-radius: 5px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.card-body {
+    padding: 20px;
+}
+
+.handle {
+    cursor: grab;
+    user-select: none;
+}
+
+.handle:after,
+.handle:before {
+    display: block;
+}
+
+.handle:active,
+.handle:active:before,
+.handle:active:after {
+    cursor: grabbing;
+}
+
+.dropArea {
+    background-color: #f1f2f6;
+    color: black;
+    border: #ced6e0 1px solid;
+}
+
+.selectedTask {
+    opacity: 0.5;
 }
 
 #search-add-wrapper {
@@ -94,33 +150,4 @@ p {
     text-decoration: none;
     font-size: 42px;
     text-shadow: 1px 1px #81413B;
-}
-
-input[type=text],
-input[type=password],
-textarea {
-    border: 1px solid #EB796F;
-    border-radius: 5px;
-    padding: 10px;
-    width: 90%;
-}
-
-label {
-    padding-top: 10px !important;
-    display: block;
-}
-
-.button {
-    border: 1px solid #EB796F;
-    background-color: #FAFAFA;
-    color: #EB796F;
-    padding: 10px;
-    font-size: 14px;
-    border-radius: 5px;
-    cursor: pointer;
-    text-decoration: none;
-}
-
-.card-body {
-    padding: 20px;
 }
