--- a/todo/base/templates/base/main.html
+++ b/todo/base/templates/base/main.html
@@ -5,6 +5,8 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="To Do App">
+    <meta name="theme-color" content="#EB796F"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>To Do App</title>
